Updating index.js file

--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
               <button>login</button>
             </nav>
 
- 
+            <P class = "pick-me"></P>
 
             <aside id="test" class="shipping-calculator  test">
               <header>
                 <img src="img/truck.svg" alt="shipping van">
                 <h2>free quote shipping</h2>
-            
+                <p class = "shipping-rate"></p>
               </header>
+
               <div class="control test">
                 <label  for="weight">calculate</label>
-                <input id="weight" type="text"   >
+                <input id="weight" type="text" value="12"  >
               </div>
             </aside>
         
